--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/BesanaLorenzo/ApiServer#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {}
 }
